terraform/1-network.tf
provider "aws" {
  access_key = "AKIAYU7IJEJYZQMQTEVY"
  secret_key = "ItolEyqYQkoSw+lHWLEfTrNsKjX8wOQAQ+fcfnEf"
  region = "us-east-1"

  default_tags {
    tags = {
      Terraform = "true"
      Name      = "kubernetes-sample"
    }
  }
}

locals {
  cidr_block = "10.1.0.0/16"
}

resource "aws_vpc" "main" {
  cidr_block           = local.cidr_block
  enable_dns_hostnames = true
  enable_dns_support   = true
}

resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id
}

resource "aws_subnet" "public" {
  vpc_id     = aws_vpc.main.id
  cidr_block = cidrsubnet(local.cidr_block, 8, 1)

  availability_zone = "us-east-1a"
}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id
}

resource "aws_route" "public" {
  route_table_id         = aws_route_table.public.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.main.id
}

resource "aws_route_table_association" "public" {
  subnet_id      = aws_subnet.public.id
  route_table_id = aws_route_table.public.id
}
